ImpressCMS ChangeLog

=============================================
Unreleased : ImpressCMS 1.1 "???" Alpha
=============================================

- Added : Feature to select rights for diferent groups and modules for the debug. (young-pee)
- Added : IcmsLibrariesHandler - New feature allowing easy inclusion of third party libraries without hacking any core file (malanciault/davidl2)
- Added : Including Scriptaculous library
- Added : Feature to select the editor in the preferences. (young-pee)
- Added : The XOOPS_EDITOR_PATH and XOOPS_EDITOR_URL consntans (young-pee)
- Added : The /editors folder (young-pee)
- Added : The tinymce (young-pee)
- Added : Feature to select in which modules the groups can use the editor (the_rplima)
- Added : Autoselection of system language depeding the browser language configuration (if multilanguage enabled). (young-pee)

- Improved : The pm form to use the selected editor (the_rplima)

=============================================
Unreleased : ImpressCMS 1.0 "Janus" RC
=============================================

- Added : New feature "registration by invitation" (sudhacker)

- Fixed : #1890412: cache folder is not cleared after update. it now shouldn't remove any .htaccess or php.ini files (for php cgi users) either. (vaughan / skenow)
- Fixed : #1891588: Timezone offset empty (compatibility issue with versions of PHP aswell as operating system when using floats. (changed to an integer value instead). (vaughan / jegelstaff)
- Fixed : #1890400 Can't register new user. (seems to be a mysql version compatibility issue) (vaughan)
- Fixed : w3c validation (sato-san)
- Fixed : #1870346 System blocks not visible to added group (skenow/dave_l)
- Fixed : #1867922 No nice path from getNicePathFromId (MacDonald/malanciault)

========================================
2008-01-08 : ImpressCMS 1.0 "Janus" Beta
========================================
