@@ -275,4 +275,5 @@ define("_MD_AM_EDITOR_DEFAULT_DESC","Select the default Editor for all the site.
 define("_MD_AM_EDITOR_ENABLED_LIST","Enabled Editors");
 define("_MD_AM_EDITOR_ENABLED_LIST_DESC","Select the selectable editors by the modules (If the module has a configuration to select the editor.)");
 
+define("_MD_AM_ALLOW_ANONYMOUS_VIEW_PROFILE","Allow annonymous users to users profiles");
 ?>
